force-app/main/default/objects/Opportunity/fields/Count_of_Products_Talent__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Products_Talent__c</fullName>
    <label>Count of Products - Talent</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Division__c</field>
        <operation>equals</operation>
        <value>Talent</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>