force-app/main/default/objects/Opportunity/fields/Count_of_Retainer_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Retainer_Products__c</fullName>
    <label>Count of Retainer Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name_text__c</field>
        <operation>contains</operation>
        <value>Retainer</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>