force-app/main/default/objects/Opportunity/fields/Creative__c.field-meta.xml
<CustomField>
    <fullName>Creative__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if Creative team is needed based on campaign objectives</inlineHelpText>
    <label>Creative</label>
    <type>Checkbox</type>
</CustomField>