force-app/main/default/objects/Opportunity/fields/Creative_Notes__c.field-meta.xml
<CustomField>
    <fullName>Creative_Notes__c</fullName>
    <label>Creative Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>