force-app/main/default/objects/Opportunity/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <inlineHelpText>Which type of posts will influencers be producing (photo, video, event, fully activated). Can select multiple</inlineHelpText>
    <label>Project Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AOR</fullName>
            </value>
            <value>
                <fullName>Influencer Campaign</fullName>
            </value>
            <value>
                <fullName>Custom Video</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Brand Campaign</fullName>
            </value>
            <value>
                <fullName>Event Coverage</fullName>
                <isActive>false</isActive>
                <label>Event Coverage</label>
            </value>
            <value>
                <fullName>Fully Activated</fullName>
                <isActive>false</isActive>
                <label>Fully Activated</label>
            </value>
            <value>
                <fullName>Photo Posts</fullName>
                <isActive>false</isActive>
                <label>Photo Posts</label>
            </value>
            <value>
                <fullName>Video Posts</fullName>
                <isActive>false</isActive>
                <label>Video Posts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>