force-app/main/default/objects/Opportunity/fields/Credentials_Meeting_Datestamp__c.field-meta.xml
<CustomField>
    <fullName>Credentials_Meeting_Datestamp__c</fullName>
    <description>Date Credentials/Meeting Stage is reached</description>
    <label>Credentials/Meeting Datestamp</label>
    <type>Date</type>
</CustomField>