force-app/main/default/objects/Opportunity/fields/CRMT__Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>CRMT__Pricebook2Id__c</fullName>
    <formula>Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook2Id</label>
    <type>Text</type>
</CustomField>