force-app/main/default/objects/Opportunity/fields/Currency_Text__c.field-meta.xml
<CustomField>
    <fullName>Currency_Text__c</fullName>
    <formula>CASE( CurrencyIsoCode , 
&apos;GBP&apos;, &apos;GBP &apos;+TEXT(Amount)+&apos; (USD &apos;+TEXT(FLOOR(Amount / CURRENCYRATE(&apos;GBP&apos;)))+&apos;)&apos;, 
&apos;CAD&apos;, &apos;CAD &apos;+TEXT(Amount)+&apos; (USD &apos;+TEXT(FLOOR(Amount / CURRENCYRATE(&apos;CAD&apos;)))+&apos;)&apos;,
&apos;EUR&apos;, &apos;EUR &apos;+TEXT(Amount)+&apos; (USD &apos;+TEXT(FLOOR(Amount / CURRENCYRATE(&apos;EUR&apos;)))+&apos;)&apos;,
&apos;MXN&apos;, &apos;MXN &apos;+TEXT(Amount)+&apos; (USD &apos;+TEXT(FLOOR(Amount / CURRENCYRATE(&apos;MXN&apos;)))+&apos;)&apos;,
       TEXT(Amount)+&apos; USD&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Text</label>
    <type>Text</type>
</CustomField>