force-app/main/default/objects/Opportunity/fields/Current_Program_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Job_Description__c</fullName>
    <formula>Account_Program__r.Program__r.Job_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Program Job Description</label>
    <type>Text</type>
</CustomField>