force-app/main/default/objects/Opportunity/fields/Current_Shipping_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Current_Shipping_Form_Link__c</fullName>
    <formula>Account_Program__r.Program__r.Shipping_Form__c &amp; &apos;?tfa_2338=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Shipping Form Link</label>
    <type>Text</type>
</CustomField>