force-app/main/default/objects/Opportunity/fields/Cycle_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Date_Due__c</fullName>
    <inlineHelpText>When RFP needs to be submitted</inlineHelpText>
    <label>Cycle Date Due</label>
    <type>DateTime</type>
</CustomField>