force-app/main/default/objects/Opportunity/fields/Cycle_Direct_Budget_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Direct_Budget_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle Direct Budget / Forecast?</label>
    <type>Checkbox</type>
</CustomField>