force-app/main/default/objects/Opportunity/fields/Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Confirmed__c</fullName>
    <label>Date Confirmed</label>
    <type>Date</type>
</CustomField>