force-app/main/default/objects/Opportunity/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <inlineHelpText>When RFP needs to be submitted</inlineHelpText>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>