force-app/main/default/objects/Opportunity/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <inlineHelpText>What is the date the opportunity was created</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>