force-app/main/default/objects/Opportunity/fields/Days_In_Application_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Application_Completed__c</fullName>
    <formula>IF ( ISPICKVAL(StageName, &apos;New&apos;) ,TODAY() -  Application_Completed_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Application Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>