force-app/main/default/objects/Opportunity/fields/Days_In_Decision_Pending__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Decision_Pending__c</fullName>
    <formula>IF ( ISPICKVAL(StageName, &apos;Decision Pending&apos;) ,TODAY() -   Decision_Pending_Date__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Decision Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>