force-app/main/default/objects/Opportunity/fields/Days_In_Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Interview_Stage__c</fullName>
    <formula>IF ( ISPICKVAL(StageName, &apos;Interview&apos;) ,TODAY() -   Interview_Stage_Date__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Interview Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>