force-app/main/default/objects/Opportunity/fields/Days_since_interview_sent_no_reponse__c.field-meta.xml
<CustomField>
    <fullName>Days_since_interview_sent_no_reponse__c</fullName>
    <formula>IF(ISBLANK (Interview_Scheduled_Date__c) ,Today() - Interview_Requested_Date__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since interview sent no reponse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>