force-app/main/default/objects/Opportunity/fields/Decision_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Pending_Date__c</fullName>
    <label>Decision Pending Date</label>
    <type>Date</type>
</CustomField>