force-app/main/default/objects/Opportunity/fields/Demographic__c.field-meta.xml
<CustomField>
    <fullName>Demographic__c</fullName>
    <inlineHelpText>Specify specific demo of the campaign</inlineHelpText>
    <label>Demographic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>