force-app/main/default/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Source Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Action Sports Athletes</fullName>
            </value>
            <value>
                <fullName>Brands &amp; Properties US</fullName>
            </value>
            <value>
                <fullName>Brands &amp; Properties UK</fullName>
            </value>
            <value>
                <fullName>Brands Canada</fullName>
            </value>
            <value>
                <fullName>Brands Retainers US</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Cycle Direct</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Experiential Benelux</fullName>
            </value>
            <value>
                <fullName>Experiential Canada</fullName>
            </value>
            <value>
                <fullName>Experiential UK</fullName>
            </value>
            <value>
                <fullName>Experiential US</fullName>
            </value>
            <value>
                <fullName>General/Executive Team</fullName>
            </value>
            <value>
                <fullName>Global Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Laundry Service</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Properties US - Raleigh</fullName>
            </value>
            <value>
                <fullName>Talent Marketing</fullName>
            </value>
            <value>
                <fullName>Team Sports</fullName>
            </value>
            <value>
                <fullName>The Agency</fullName>
            </value>
            <value>
                <fullName>Digital Design &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Next Gen</fullName>
            </value>
            <value>
                <fullName>Trevor//Peter</fullName>
            </value>
            <value>
                <fullName>Trevor Peter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>