force-app/main/default/objects/Opportunity/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if Design team is needed based on campaign objectives</inlineHelpText>
    <label>Design</label>
    <type>Checkbox</type>
</CustomField>