force-app/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Source Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agency / Partner</fullName>
            </value>
            <value>
                <fullName>Athlete Exchange</fullName>
            </value>
            <value>
                <fullName>Brands and Properties</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Talent Representation</fullName>
            </value>
            <value>
                <fullName>Wasserman Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>