force-app/main/default/objects/Opportunity/fields/Earliest_Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Product_Start_Date__c</fullName>
    <label>Earliest Product Start Date</label>
    <summarizedField>OpportunityLineItem.ServiceDate</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>