force-app/main/default/objects/Opportunity/fields/Email_Write_up__c.field-meta.xml
<CustomField>
    <fullName>Email_Write_up__c</fullName>
    <label>Email Write-up?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>