force-app/main/default/objects/Opportunity/fields/Encore_Request_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Encore_Request_Initiated_Date__c</fullName>
    <label>Encore Request Initiated Date</label>
    <type>Date</type>
</CustomField>