force-app/main/default/objects/Opportunity/fields/Endemic_vs_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Endemic_vs_Corporate__c</fullName>
    <label>Endemic vs Corporate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endemic</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>