force-app/main/default/objects/Opportunity/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>