force-app/main/default/objects/Opportunity/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <inlineHelpText>Specify the length of influencer exclusivity (if any)</inlineHelpText>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>