force-app/main/default/objects/Opportunity/fields/Expiration_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Indicator__c</fullName>
    <formula>IF( Days_Remaining__c &lt;= 30, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151I0000082wTD&quot;, &quot;&lt;= 30 Days&quot;, 15, 15),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Indicator</label>
    <type>Text</type>
</CustomField>