force-app/main/default/objects/Opportunity/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>LS / Cycle Margin Explanation</label>
    <type>TextArea</type>
</CustomField>