force-app/main/default/objects/Opportunity/fields/Financial_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>Financial_Forecasting__c</fullName>
    <formula>CASE(StageName, &quot;Opportunity Identified&quot;, &quot;4) Pipeline&quot;,
&quot;Proposal Submitted&quot;, &quot;4) Pipeline&quot;,
&quot;Negotiation&quot;, &quot;4) Pipeline&quot;,
&quot;Verbal Commitment&quot;, &quot;3) Projected - Verbal Commitment&quot;,
&quot;Closed Won&quot;, &quot;2) Projected - Closed Won&quot;,
&quot;Closed Won - Reconciled&quot;, &quot;1) Contracted - Closed Won Reconciled&quot;,
&quot;Closed Lost&quot;, &quot;5) Omitted&quot;,
&quot;Declined&quot;, &quot;5) Omitted&quot;,
&quot;Prospecting&quot;, &quot;5) Omitted&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Forecasting</label>
    <type>Text</type>
</CustomField>