force-app/main/default/objects/Opportunity/fields/First_Closed__c.field-meta.xml
<CustomField>
    <fullName>First_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflow Rule checkbox to track the initial moment an opportunity moves to Closed</description>
    <label>First Closed</label>
    <type>Checkbox</type>
</CustomField>