force-app/main/default/objects/Opportunity/fields/Flight_Date_Description__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Description__c</fullName>
    <inlineHelpText>Specify key notes for flight date (around superbowl, holidays, big events, etc.)</inlineHelpText>
    <label>Flight Date Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>