force-app/main/default/objects/Opportunity/fields/Flight_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_End_Date__c</fullName>
    <description>Campaign run date</description>
    <inlineHelpText>When does the media campaign end</inlineHelpText>
    <label>Flight End Date</label>
    <type>Date</type>
</CustomField>