force-app/main/default/objects/Opportunity/fields/Flight_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Start_Date__c</fullName>
    <description>Campaign run date</description>
    <inlineHelpText>When does the media campaign launch</inlineHelpText>
    <label>Flight Start Date</label>
    <type>Date</type>
</CustomField>