force-app/main/default/objects/Opportunity/fields/Follower_Range_End__c.field-meta.xml
<CustomField>
    <fullName>Follower_Range_End__c</fullName>
    <label>Follower Range End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>