force-app/main/default/objects/Opportunity/fields/Follower_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Follower_Range_Start__c</fullName>
    <inlineHelpText>Specify follower count mimimum or range (if any)</inlineHelpText>
    <label>Follower Count Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>