force-app/main/default/objects/Opportunity/fields/Force_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Force_Sync_Status__c</fullName>
    <label>Invoice Request Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>