force-app/main/default/objects/Opportunity/fields/ForceSync__c.field-meta.xml
<CustomField>
    <fullName>ForceSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ForceSync</label>
    <type>Checkbox</type>
</CustomField>