force-app/main/default/objects/Opportunity/fields/Forecast_Category_Formula__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category_Formula__c</fullName>
    <formula>IF(RecordType.Name = &quot;Quota&quot;,&quot;Budget&quot;, 
IF(ISPICKVAL(StageName,&quot;Closed Won - Reconciled&quot;),&quot;Contracted&quot;, 
IF(ISPICKVAL(StageName,&quot;Closed Won&quot;),&quot;Projected&quot;, 
TEXT(ForecastCategoryName))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wasserman Forecast Category</label>
    <type>Text</type>
</CustomField>