force-app/main/default/objects/Opportunity/fields/Forecast_Category_Stage__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category_Stage__c</fullName>
    <formula>CASE(StageName, &quot;Opportunity Identified&quot;, &quot;6) Pipeline - Opportunity Identified&quot;,
                &quot;Proposal Submitted&quot;, &quot;5) Pipeline - Proposal Submitted&quot;,
                &quot;Negotiation&quot;, &quot;4) Pipeline - Negotiation&quot;,
                &quot;Verbal Commitment&quot;, &quot;3) Projected - Verbal Commitment&quot;,
                &quot;Closed Won&quot;, &quot;2) Projected - Closed Won&quot;,
                &quot;Closed Won - Reconciled&quot;, &quot;1) Contracted - Closed Won Reconciled&quot;,
                &quot;Closed Lost&quot;, &quot;8) Omitted - Closed Lost&quot;,
                &quot;Declined&quot;, &quot;9) Omitted - Declined&quot;,
                &quot;Prospecting&quot;, &quot;7) Omitted - Prospecting&quot;,
                null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category - Stage</label>
    <type>Text</type>
</CustomField>