force-app/main/default/objects/Opportunity/fields/Full_Amount__c.field-meta.xml
<CustomField>
    <fullName>Full_Amount__c</fullName>
    <formula>Amount /  Commission_RW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>