force-app/main/default/objects/Opportunity/fields/Generate_Meaningful_ID__c.field-meta.xml
<CustomField>
    <fullName>Generate_Meaningful_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox populated on approvals for a Project ID record to be created and added on the opportunity product</description>
    <label>Generate Meaningful ID</label>
    <type>Checkbox</type>
</CustomField>