force-app/main/default/objects/Opportunity/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <inlineHelpText>Specify specific geos of the campaign</inlineHelpText>
    <label>Geo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>