force-app/main/default/objects/Opportunity/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>Specify if we&apos;re pacing on external CPM or impressions #</inlineHelpText>
    <label>Goal</label>
    <type>TextArea</type>
</CustomField>