force-app/main/default/objects/Opportunity/fields/Has_Retainer_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Retainer_Product__c</fullName>
    <label>Has Retainer Product</label>
    <summarizedField>OpportunityLineItem.End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name_text__c</field>
        <operation>equals</operation>
        <value>Retainer</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>