force-app/main/default/objects/Opportunity/fields/ID_Account_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>ID_Account_Opportunity_Name__c</fullName>
    <formula>OpportunityId__c &amp; &quot; - &quot; &amp; Account_and_Opportunity_Name_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID + Account + Opportunity Name</label>
    <type>Text</type>
</CustomField>