force-app/main/default/objects/Opportunity/fields/Identified_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Identified_Stage_Date__c</fullName>
    <label>Identified Stage Date</label>
    <type>Date</type>
</CustomField>