force-app/main/default/objects/Opportunity/fields/Include_in_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Forecast?</label>
    <type>Checkbox</type>
</CustomField>