force-app/main/default/objects/Opportunity/fields/Includes_BPBR_US_Cost_Centers__c.field-meta.xml
<CustomField>
    <fullName>Includes_BPBR_US_Cost_Centers__c</fullName>
    <description>Counts the number of BPBR US Cost Center Products on an Opportunity</description>
    <label>Includes BPBR US Cost Centers?</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Department__c</field>
        <operation>equals</operation>
        <value>Properties US - Raleigh, Brands Retainers US, Brands &amp; Properties US</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>