force-app/main/default/objects/Opportunity/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Influencers will be needed on this opportunity</description>
    <inlineHelpText>Check if Influencers will be needed on this opportunity</inlineHelpText>
    <label>Influencer</label>
    <type>Checkbox</type>
</CustomField>