force-app/main/default/objects/Opportunity/fields/Interdepartmental__c.field-meta.xml
<CustomField>
    <fullName>Interdepartmental__c</fullName>
    <formula>IF(AND(TEXT(Department__c) &lt;&gt; &quot;&quot;, 
OR( 
TEXT(Department__c)= Owner.Department, 
SUBSTITUTE(TEXT(LeadSource),&quot;Cycle / LS&quot;,&quot;CYCLE / LS&quot;)=Owner.Department)),&quot;Intradepartmental&quot;, 
IF(AND(TEXT(Department__c) &lt;&gt; &quot;&quot;,TEXT(Department__c) &lt;&gt; Owner.Department,TEXT(Division__c) &lt;&gt; &quot;&quot;,TEXT( Division__c )= Owner.Division),&quot;Interdepartmental&quot;, 
IF(OR(TEXT(Department__c) = &quot;&quot;,TEXT(Division__c)= &quot;&quot;),&quot;No Source Listed&quot;,&quot;Extradivisional&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interdepartmental</label>
    <type>Text</type>
</CustomField>