force-app/main/default/objects/Opportunity/fields/Internal_Budget_Alternate__c.field-meta.xml
<CustomField>
    <fullName>Internal_Budget_Alternate__c</fullName>
    <label>Internal Budget (Alternate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>