force-app/main/default/objects/Opportunity/fields/Interview_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Interview_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Not Required</label>
    <type>Checkbox</type>
</CustomField>