force-app/main/default/objects/Opportunity/fields/Interview_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Requested_Date__c</fullName>
    <label>Interview Requested Date</label>
    <type>Date</type>
</CustomField>