force-app/main/default/objects/Opportunity/fields/Interview_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled_Date__c</fullName>
    <label>Interview Scheduled Date</label>
    <type>Date</type>
</CustomField>