force-app/main/default/objects/Opportunity/fields/Is_LSC__c.field-meta.xml
<CustomField>
    <fullName>Is_LSC__c</fullName>
    <formula>IF(OR( RecordType.Name = &quot;Laundry Service&quot;, RecordType.Name = &quot;Cycle&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is LSC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>