force-app/main/default/objects/Opportunity/fields/Latest_Product_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Product_End_Date__c</fullName>
    <description>Latest end date from all Products associated with the Opportunity</description>
    <label>Latest Product End Date</label>
    <summarizedField>OpportunityLineItem.End_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>