force-app/main/default/objects/Opportunity/fields/Lead_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track general lead account first used to initialize creation of the opportunity. This is populated by automation on creation.</description>
    <label>Lead Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Lead Account)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>